2003-11-26  Bradley Bell  <btb@icculus.org>

	* include/pstypes.h: OS X fixes

	* cfile/cfile.c, include/pstypes.h, main/inferno.c,
	main/newmenu.h: linux fixes

	* configure.ac cygconf VisualC/d2x.dsw VisualC/d2x/d2x.dsp
	VisualC/d2xgl/.cvsignore VisualC/d2xgl/d2xgl.dsp arch/ogl/gr.c
	arch/ogl/ogl.c include/d_io.h include/loadgl.h include/ogl_init.h
	include/pstypes.h include/u_mem.h main /state.c main/vers_id.h
	misc/d_io.c: added Visual C project for opengl, buncha macro fixes
	and stuff

	* arch/sdl/gr.c: fix sdl gr_update

	* 2d/font.c, VisualC/d2x/d2x.dsp, VisualCE/d2x/d2x.vcp,
	VisualCE/mveplayer/mveplayer.vcp, arch/win32/ipx_mcast4.c,
	arch/win32/ipx_udp.c, arch/win32/ipx_win.c, arch/sdl/gr.c,
	cfile/cfile.c, console/CON_console.c, include/d_io.h,
	include/error.h, include/pstypes.h, include/strutil.h,
	include/u_dpmi.h, libmve/mve_main.c, libmve/mveplay.c,
	main/cntrlcen.c, main/console.c, main/gameseq.c, main/inferno.c,
	main/movie.c, main/newdemo.c, main/newmenu.c, main/newmenu.h,
	main/playsave.c, main/songs.c, main/state.c, main/text.c,
	mem/mem.c, misc/args.c, misc/d_io.c, misc/strutil.c: Visual C,
	PocketPC fixes

2003-11-25  Bradley Bell  <btb@icculus.org>

	* VisualC/d2x, VisualC/d2x/.cvsignore, VisualC/d2x/d2x.dsp,
	VisualC/d2x.dsw, VisualC/libmve/libmve.dsp,
	libmve/VisualC/mveplayer.dsp: updated project files

	* libmve/mve_main.c, libmve/mvelib.c, libmve/mveplay.c: mveplayer
	working w/Visual C++

	* VisualC, VisualC/.cvsignore, VisualC/d2x.dsw, VisualC/libmve,
	VisualC/libmve/.cvsignore, VisualC/libmve/libmve.dsp,
	VisualC/mveplayer, VisualC/mveplayer/.cvsignore,
	VisualC/mveplayer/mveplayer.dsp: added project files for Visual
	C++

	* VisualCE/.cvsignore, VisualCE/d2x/.cvsignore,
	VisualCE/libmve/.cvsignore, VisualCE/mveplayer/.cvsignore: added
	.cvsignore files

2003-11-24  Bradley Bell  <btb@icculus.org>

	* libmve/decoder8.c, libmve/mve_main.c, libmve/mvelib.c,
	libmve/mveplay.c: stuff to play mve's in WinCE
